Changes for analysing metrics

--- a/Craft/src/main/resources/application.properties
+++ b/Craft/src/main/resources/application.properties
@@ -8,3 +8,13 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.boot.autoconfigure=ERROR
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+#info
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
